force-app/main/default/objects/talkdesk__Talkdesk_Syncing_Custom_Object__c/talkdesk__Talkdesk_Syncing_Custom_Object__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Talkdesk Syncing Custom Object</label>
</CustomObject>