force-app/main/default/objects/talkdesk__Talkdesk_Syncing_Custom_Object__c/fields/talkdesk__Lookup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Lookup_Field_API_Name__c</fullName>
    <description>API Name of lookup field which was added to Talkdesk Activity Object</description>
    <label>Lookup Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>