force-app/main/default/objects/talkdesk__Talkdesk_Syncing_Custom_Object__c/fields/talkdesk__Lookup_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Lookup_Field_Label__c</fullName>
    <label>Lookup Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>