force-app/main/default/objects/talkdesk__Talkdesk_Syncing_Custom_Object__c/fields/talkdesk__Syncing_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Syncing_Object_API_Name__c</fullName>
    <description>API Name of Object which could be click-to-dialed</description>
    <label>Syncing Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>